ubs page starting

--- a/pages/mainpage/mainpage.html
+++ b/pages/mainpage/mainpage.html
@@ -179,8 +179,8 @@
     <nav class="nav">
         <div class="navOptions">
             <li class="navOptionsList">PRINCIPAL</li>
-            <li class="navOptionsList">A SMS</li>
-            <li class="navOptionsList">CONHEÇA UBS</li>
+            a<li class="navOptionsList">A SMS</li>
+            <li class="navOptionsList"><a href="/pages/ubspage/ubspage.html">CONHEÇA UBS</a></li>
             <li class="navOptionsList">SERVIÇOS</li>
             <li class="navOptionsList">INFORMATIVOS</li> 
         </div>
